@@ -1,3 +1,5 @@
+2006/7/19 -- released version 20060719_trunk
+
 2006/7/18 -- released version 20060718_trunk
 
 2006/7/17 -- released version 20060717_trunk
